<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_bottom_nav"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_fitness"
        android:icon="@drawable/fitness_bottom_nav"
        android:title="@string/title_fitness" />

    <item
        android:id="@+id/navigation_messenger"
        android:icon="@drawable/chat_bottom_nav"
        android:title="@string/title_messages" />
    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/food_bottom_nav"
        android:title="@string/title_food" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_bottom_nav"
        android:title="@string/title_profile" />

</menu>