<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mir.fitnessapplication.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_fitness"
        android:name="com.mir.fitnessapplication.main.ui.fitness.FitnessFragment"
        android:label="@string/title_fitness"
        tools:layout="@layout/fragment_fitness" />

    <fragment
        android:id="@+id/navigation_messenger"
        android:name="com.mir.fitnessapplication.main.ui.messenger.MessengerFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messenger" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.mir.fitnessapplication.main.ui.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_fitness" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mir.fitnessapplication.main.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_fitness" />
</navigation>